--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Better Cayman Jekyll Theme
 email: morpheus636@morpheus636.com
 description: "Better Cayman is a simple theme for Jekyll"
+logo: ""
 
 # Build settings
 markdown: kramdown
